doc: updating py config

--- a/output/authors.html
+++ b/output/authors.html
@@ -10,21 +10,22 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="http://localhost:8000/theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
 
+  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="malikblog Atom">
 
 
 
@@ -42,7 +43,7 @@
   <meta property="og:title" content="malikblog"/>
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="http://localhost:8000"/>
+  <meta property="og:url" content=""/>
 
   <title>malikblog &ndash; Authors</title>
 
@@ -52,12 +53,12 @@
 
 <aside>
   <div>
-    <a href="http://localhost:8000/">
-      <img src="http://localhost:8000/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
     </a>
 
     <h1>
-      <a href="http://localhost:8000/">Abdulmalik Ibikunle</a>
+      <a href="/">Abdulmalik Ibikunle</a>
     </h1>
 
     <p>DevOps Engineer</p>
@@ -69,7 +70,7 @@
 
             <li>
               <a target="_self"
-                 href="http://localhost:8000/pages/about.html#about">
+                 href="/pages/about.html#about">
                 About Me
               </a>
             </li>
@@ -112,8 +113,8 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="http://localhost:8000/author/abdul-malik-ibikunle.html">Abdul Malik Ibikunle</a> (1)</li>
-      <li><a href="http://localhost:8000/author/malik.html">Malik</a> (1)</li>
+      <li><a href="/author/abdul-malik-ibikunle.html">Abdul Malik Ibikunle</a> (1)</li>
+      <li><a href="/author/malik.html">Malik</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -129,7 +130,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " malikblog ",
-  "url" : "http://localhost:8000",
+  "url" : "",
   "image": "",
   "description": ""
 }
