--- a/output/cicd-best-practices-for-modern-devops.html
+++ b/output/cicd-best-practices-for-modern-devops.html
@@ -10,21 +10,22 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="http://localhost:8000/theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
 
+  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="malikblog Atom">
 
 
 
@@ -44,11 +45,11 @@
   <meta property="og:title" content="CI/CD Best Practices for Modern DevOps"/>
   <meta property="og:description" content="Continuous Integration (CI) and Continuous Deployment (CD) are the backbone of modern DevOps workflows. They ensure code moves from development to production faster, safer, and with fewer errors. Here are some best practices for CI/CD pipelines: Automate Everything From building, testing, and linting code to deployment, automation reduces human …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="http://localhost:8000/cicd-best-practices-for-modern-devops.html"/>
+  <meta property="og:url" content="/cicd-best-practices-for-modern-devops.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2025-08-19 00:00:00+02:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="http://localhost:8000/author/malik.html">
+  <meta property="article:author" content="/author/malik.html">
   <meta property="article:section" content="Blog"/>
   <meta property="og:image" content="">
 
@@ -60,12 +61,12 @@
 
 <aside>
   <div>
-    <a href="http://localhost:8000/">
-      <img src="http://localhost:8000/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
     </a>
 
     <h1>
-      <a href="http://localhost:8000/">Abdulmalik Ibikunle</a>
+      <a href="/">Abdulmalik Ibikunle</a>
     </h1>
 
     <p>DevOps Engineer</p>
@@ -77,7 +78,7 @@
 
             <li>
               <a target="_self"
-                 href="http://localhost:8000/pages/about.html#about">
+                 href="/pages/about.html#about">
                 About Me
               </a>
             </li>
@@ -119,7 +120,7 @@
       
     <h1 id="cicd-best-practices-for-modern-devops">CI/CD Best Practices for Modern DevOps</h1>
     <p>
-      Posted on Tue 19 August 2025 in <a href="http://localhost:8000/category/blog.html">Blog</a>
+      Posted on Tue 19 August 2025 in <a href="/category/blog.html">Blog</a>
 
     </p>
   </header>
@@ -196,7 +197,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " malikblog ",
-  "url" : "http://localhost:8000",
+  "url" : "",
   "image": "",
   "description": ""
 }
