--- a/output/index.html
+++ b/output/index.html
@@ -10,21 +10,22 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="http://localhost:8000/theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
 
+  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="malikblog Atom">
 
 
 
@@ -42,7 +43,7 @@
   <meta property="og:title" content="malikblog"/>
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="http://localhost:8000"/>
+  <meta property="og:url" content=""/>
 
   <title>malikblog</title>
 
@@ -52,12 +53,12 @@
 
 <aside>
   <div>
-    <a href="http://localhost:8000/">
-      <img src="http://localhost:8000/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
     </a>
 
     <h1>
-      <a href="http://localhost:8000/">Abdulmalik Ibikunle</a>
+      <a href="/">Abdulmalik Ibikunle</a>
     </h1>
 
     <p>DevOps Engineer</p>
@@ -69,7 +70,7 @@
 
             <li>
               <a target="_self"
-                 href="http://localhost:8000/pages/about.html#about">
+                 href="/pages/about.html#about">
                 About Me
               </a>
             </li>
@@ -110,9 +111,9 @@
 
 <article>
   <header>
-    <h2><a href="http://localhost:8000/cicd-best-practices-for-modern-devops.html#cicd-best-practices-for-modern-devops">CI/CD Best Practices for Modern DevOps</a></h2>
+    <h2><a href="/cicd-best-practices-for-modern-devops.html#cicd-best-practices-for-modern-devops">CI/CD Best Practices for Modern DevOps</a></h2>
     <p>
-      Posted on Tue 19 August 2025 in <a href="http://localhost:8000/category/blog.html">Blog</a>
+      Posted on Tue 19 August 2025 in <a href="/category/blog.html">Blog</a>
 
 
     </p>
@@ -126,7 +127,7 @@
 <p>From building, testing, and linting code to deployment, automation reduces human …</p></li></ol></div>
         <br>
         <a class="btn"
-           href="http://localhost:8000/cicd-best-practices-for-modern-devops.html#cicd-best-practices-for-modern-devops">
+           href="/cicd-best-practices-for-modern-devops.html#cicd-best-practices-for-modern-devops">
           Continue reading
         </a>
   </div>
@@ -134,9 +135,9 @@
 </article>
 <article>
   <header>
-    <h2><a href="http://localhost:8000/terraform-best-practices.html#terraform-best-practices">Terraform Best Practices</a></h2>
+    <h2><a href="/terraform-best-practices.html#terraform-best-practices">Terraform Best Practices</a></h2>
     <p>
-      Posted on Tue 19 August 2025 in <a href="http://localhost:8000/category/blog.html">Blog</a>
+      Posted on Tue 19 August 2025 in <a href="/category/blog.html">Blog</a>
 
 
     </p>
@@ -147,7 +148,7 @@ But writing Terraform isn’t just about “making it work”—it’s about mak
 <p>Here are some <strong>best practices</strong> that will help …</p></div>
         <br>
         <a class="btn"
-           href="http://localhost:8000/terraform-best-practices.html#terraform-best-practices">
+           href="/terraform-best-practices.html#terraform-best-practices">
           Continue reading
         </a>
   </div>
@@ -169,7 +170,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " malikblog ",
-  "url" : "http://localhost:8000",
+  "url" : "",
   "image": "",
   "description": ""
 }
