add: updating my blogs

--- a/output/categories.html
+++ b/output/categories.html
@@ -10,22 +10,21 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://malikblogsite.netlify.app/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/github.min.css">
+          href="https://malikblogsite.netlify.app/theme/pygments/monokai.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://malikblogsite.netlify.app/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://malikblogsite.netlify.app/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://malikblogsite.netlify.app/theme/font-awesome/css/solid.css">
 
 
 
 
-  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="malikblog Atom">
 
 
 
@@ -43,7 +42,7 @@
   <meta property="og:title" content="malikblog"/>
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+  <meta property="og:url" content="https://malikblogsite.netlify.app"/>
 
   <title>malikblog &ndash; Categories</title>
 
@@ -53,12 +52,12 @@
 
 <aside>
   <div>
-    <a href="/">
-      <img src="/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
+    <a href="https://malikblogsite.netlify.app/">
+      <img src="https://malikblogsite.netlify.app/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
     </a>
 
     <h1>
-      <a href="/">Abdulmalik Ibikunle</a>
+      <a href="https://malikblogsite.netlify.app/">Abdulmalik Ibikunle</a>
     </h1>
 
     <p>DevOps Engineer</p>
@@ -70,7 +69,7 @@
 
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
+                 href="https://malikblogsite.netlify.app/pages/about.html#about">
                 About Me
               </a>
             </li>
@@ -114,7 +113,7 @@
   <div>
     <ul class="list">
       <li>
-        <a href="/category/blog.html">Blog</a> (2)
+        <a href="https://malikblogsite.netlify.app/category/blog.html">Blog</a> (1)
       </li>
     </ul>
   </div>
@@ -131,7 +130,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " malikblog ",
-  "url" : "",
+  "url" : "https://malikblogsite.netlify.app",
   "image": "",
   "description": ""
 }
