--- a/output/terraform-like-a-pro-5-game-changing-iac-practices.html
+++ b/output/terraform-like-a-pro-5-game-changing-iac-practices.html
@@ -35,16 +35,24 @@
 
  
 
-    <meta name="author" content="Malik" />
-    <meta name="description" content="" />
-  <meta property="og:site_name" content="malikblog"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="malikblog"/>
-  <meta property="og:description" content=""/>
-  <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="http://127.0.0.1/8000"/>
+<meta name="author" content="Malik" />
+<meta name="description" content="🚀 Terraform Like a Pro: 5 Game-Changing IaC Practices Terraform isn’t just about “making it work.” It’s about making it readable, secure, and easy to maintain so your future self (and your team) will thank you. Here’s how to level up your Terraform game ⬇️ 1️⃣ Format Everything – terraform …" />
+<meta name="keywords" content="">
 
-  <title>malikblog &ndash; Posts by Malik:</title>
+
+  <meta property="og:site_name" content="malikblog"/>
+  <meta property="og:title" content="Terraform Like a Pro: 5 Game-Changing IaC Practices"/>
+  <meta property="og:description" content="🚀 Terraform Like a Pro: 5 Game-Changing IaC Practices Terraform isn’t just about “making it work.” It’s about making it readable, secure, and easy to maintain so your future self (and your team) will thank you. Here’s how to level up your Terraform game ⬇️ 1️⃣ Format Everything – terraform …"/>
+  <meta property="og:locale" content="en_US"/>
+  <meta property="og:url" content="http://127.0.0.1/8000/terraform-like-a-pro-5-game-changing-iac-practices.html"/>
+  <meta property="og:type" content="article"/>
+  <meta property="article:published_time" content="2025-08-25 00:00:00+02:00"/>
+  <meta property="article:modified_time" content=""/>
+  <meta property="article:author" content="http://127.0.0.1/8000/author/malik.html">
+  <meta property="article:section" content="Blog"/>
+  <meta property="og:image" content="">
+
+  <title>malikblog &ndash; Terraform Like a Pro: 5 Game-Changing IaC Practices</title>
 
 
 </head>
@@ -106,35 +114,61 @@
   <main>
 
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="http://127.0.0.1/8000/terraform-like-a-pro-5-game-changing-iac-practices.html#terraform-like-a-pro-5-game-changing-iac-practices">Terraform Like a Pro: 5 Game-Changing IaC Practices</a></h2>
+      
+    <h1 id="terraform-like-a-pro-5-game-changing-iac-practices">Terraform Like a Pro: 5 Game-Changing IaC Practices</h1>
     <p>
       Posted on Mon 25 August 2025 in <a href="http://127.0.0.1/8000/category/blog.html">Blog</a>
 
-
     </p>
   </header>
+
+
   <div>
-      <div><p>🚀 Terraform Like a Pro: 5 Game-Changing IaC Practices
+    <p>🚀 Terraform Like a Pro: 5 Game-Changing IaC Practices
 Terraform isn’t just about “making it work.”
  It’s about making it readable, secure, and easy to maintain so your future self (and your team) will thank you.
 Here’s how to level up your Terraform game ⬇️
-1️⃣ Format Everything – terraform …</p></div>
-        <br>
-        <a class="btn"
-           href="http://127.0.0.1/8000/terraform-like-a-pro-5-game-changing-iac-practices.html#terraform-like-a-pro-5-game-changing-iac-practices">
-          Continue reading
-        </a>
+1️⃣ Format Everything – terraform fmt
+ ✅ Keep code consistent across the team
+ ✅ Avoid “looks different on my machine” problems
+ 📎 Docs: https://developer.hashicorp.com/terraform/cli/commands/fmt
+2️⃣ Validate Before You Deploy – terraform validate
+ ✅ Catch errors early
+ ✅ Avoid shipping broken infra to prod
+ 📎Docs: https://developer.hashicorp.com/terraform/cli/commands/validate
+3️⃣ Lint for Best Practices – tflint
+ ✅ Spot typos &amp; deprecated arguments
+ ✅ Fix issues before they bite you
+ 📎 Docs: https://github.com/terraform-linters/tflint
+4️⃣ Scan for Security – Checkov
+ ✅ Find risky configs (public S3, open SGs)
+ ✅ Stay compliant (CIS, PCI, HIPAA)
+ 📎 https://www.checkov.io/
+5️⃣ Auto-Generate Docs – terraform-docs
+ ✅ Keep README in sync with your code
+ ✅ Save time on manual updates
+ 📎 Docs: https://terraform-docs.io/
+💡 Pro Tip: Add these checks to your CI/CD pipeline so they run on every PR.
+Infrastructure is more than code
+ it’s a living system.
+ Keep it clear, secure, and reliable.
+What’s your go-to Terraform best practice?
+hashtag#Terraform hashtag#DevOps hashtag#InfrastructureAsCode hashtag#CloudEngineering hashtag#Automation hashtag#Security hashtag#PlatformEngineering</p>
   </div>
+  <div class="tag-cloud">
+    <p>
+    </p>
+  </div>
+
+
+
+
+
+
+
 </article>
-
-  <div class="pagination">
-  </div>
-
-
 
 <footer>
 <p>&copy;  </p>
