add: updating my blogs

--- a/output/authors.html
+++ b/output/authors.html
@@ -113,6 +113,7 @@
   <div>
     <ul class="list">
       <li><a href="https://malikblogsite.netlify.app/author/abdul-malik-ibikunle.html">Abdul Malik Ibikunle</a> (1)</li>
+      <li><a href="https://malikblogsite.netlify.app/author/malik.html">Malik</a> (1)</li>
     </ul>
   </div>
 </article>
