--- a/output/tags.html
+++ b/output/tags.html
@@ -111,7 +111,14 @@
     <h1 id="tags">Tags</h1>
   </header>
   <div>
-    <ul class="list">    </ul>
+    <ul class="list">          <li><a href="https://malikblogsite.netlify.app/tag/automation.html">Automation</a> (1)</li>
+          <li><a href="https://malikblogsite.netlify.app/tag/cloud-engineering.html">Cloud Engineering</a> (1)</li>
+          <li><a href="https://malikblogsite.netlify.app/tag/devops.html">DevOps</a> (1)</li>
+          <li><a href="https://malikblogsite.netlify.app/tag/infrastructure-as-code.html">Infrastructure as Code</a> (1)</li>
+          <li><a href="https://malikblogsite.netlify.app/tag/platform-engineering.html">Platform Engineering</a> (1)</li>
+          <li><a href="https://malikblogsite.netlify.app/tag/security.html">Security</a> (1)</li>
+          <li><a href="https://malikblogsite.netlify.app/tag/terraform.html">Terraform</a> (1)</li>
+    </ul>
   </div>
 </article>
 
