--- a/output/terraform-like-a-pro-5-game-changing-iac-practices.html
+++ b/output/terraform-like-a-pro-5-game-changing-iac-practices.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="http://127.0.0.1/8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://malikblogsite.netlify.app/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="http://127.0.0.1/8000/theme/pygments/github.min.css">
+          href="https://malikblogsite.netlify.app/theme/pygments/monokai.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="http://127.0.0.1/8000/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="http://127.0.0.1/8000/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="http://127.0.0.1/8000/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://malikblogsite.netlify.app/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://malikblogsite.netlify.app/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://malikblogsite.netlify.app/theme/font-awesome/css/solid.css">
 
 
 
@@ -36,20 +36,27 @@
  
 
 <meta name="author" content="Malik" />
-<meta name="description" content="🚀 Terraform Like a Pro: 5 Game-Changing IaC Practices Terraform isn’t just about “making it work.” It’s about making it readable, secure, and easy to maintain so your future self (and your team) will thank you. Here’s how to level up your Terraform game ⬇️ 1️⃣ Format Everything – terraform …" />
-<meta name="keywords" content="">
+<meta name="description" content="Level up your Terraform workflow with five practical Infrastructure as Code (IaC) practices that improve readability, security, and maintainability." />
+<meta name="keywords" content="Terraform, DevOps, Infrastructure as Code, Cloud Engineering, Automation, Security, Platform Engineering">
 
 
   <meta property="og:site_name" content="malikblog"/>
   <meta property="og:title" content="Terraform Like a Pro: 5 Game-Changing IaC Practices"/>
-  <meta property="og:description" content="🚀 Terraform Like a Pro: 5 Game-Changing IaC Practices Terraform isn’t just about “making it work.” It’s about making it readable, secure, and easy to maintain so your future self (and your team) will thank you. Here’s how to level up your Terraform game ⬇️ 1️⃣ Format Everything – terraform …"/>
+  <meta property="og:description" content="Level up your Terraform workflow with five practical Infrastructure as Code (IaC) practices that improve readability, security, and maintainability."/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="http://127.0.0.1/8000/terraform-like-a-pro-5-game-changing-iac-practices.html"/>
+  <meta property="og:url" content="https://malikblogsite.netlify.app/terraform-like-a-pro-5-game-changing-iac-practices.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2025-08-25 00:00:00+02:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="http://127.0.0.1/8000/author/malik.html">
+  <meta property="article:author" content="https://malikblogsite.netlify.app/author/malik.html">
   <meta property="article:section" content="Blog"/>
+  <meta property="article:tag" content="Terraform"/>
+  <meta property="article:tag" content="DevOps"/>
+  <meta property="article:tag" content="Infrastructure as Code"/>
+  <meta property="article:tag" content="Cloud Engineering"/>
+  <meta property="article:tag" content="Automation"/>
+  <meta property="article:tag" content="Security"/>
+  <meta property="article:tag" content="Platform Engineering"/>
   <meta property="og:image" content="">
 
   <title>malikblog &ndash; Terraform Like a Pro: 5 Game-Changing IaC Practices</title>
@@ -60,12 +67,12 @@
 
 <aside>
   <div>
-    <a href="http://127.0.0.1/8000/">
-      <img src="http://127.0.0.1/8000/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
+    <a href="https://malikblogsite.netlify.app/">
+      <img src="https://malikblogsite.netlify.app/theme/img/profile.png" alt="Abdulmalik Ibikunle" title="Abdulmalik Ibikunle">
     </a>
 
     <h1>
-      <a href="http://127.0.0.1/8000/">Abdulmalik Ibikunle</a>
+      <a href="https://malikblogsite.netlify.app/">Abdulmalik Ibikunle</a>
     </h1>
 
     <p>DevOps Engineer</p>
@@ -77,7 +84,7 @@
 
             <li>
               <a target="_self"
-                 href="http://127.0.0.1/8000/pages/about.html#about">
+                 href="https://malikblogsite.netlify.app/pages/about.html#about">
                 About Me
               </a>
             </li>
@@ -119,46 +126,69 @@
       
     <h1 id="terraform-like-a-pro-5-game-changing-iac-practices">Terraform Like a Pro: 5 Game-Changing IaC Practices</h1>
     <p>
-      Posted on Mon 25 August 2025 in <a href="http://127.0.0.1/8000/category/blog.html">Blog</a>
+      Posted on Mon 25 August 2025 in <a href="https://malikblogsite.netlify.app/category/blog.html">Blog</a>
 
     </p>
   </header>
 
 
   <div>
-    <p>🚀 Terraform Like a Pro: 5 Game-Changing IaC Practices
-Terraform isn’t just about “making it work.”
- It’s about making it readable, secure, and easy to maintain so your future self (and your team) will thank you.
-Here’s how to level up your Terraform game ⬇️
-1️⃣ Format Everything – terraform fmt
- ✅ Keep code consistent across the team
- ✅ Avoid “looks different on my machine” problems
- 📎 Docs: https://developer.hashicorp.com/terraform/cli/commands/fmt
-2️⃣ Validate Before You Deploy – terraform validate
- ✅ Catch errors early
- ✅ Avoid shipping broken infra to prod
- 📎Docs: https://developer.hashicorp.com/terraform/cli/commands/validate
-3️⃣ Lint for Best Practices – tflint
- ✅ Spot typos &amp; deprecated arguments
- ✅ Fix issues before they bite you
- 📎 Docs: https://github.com/terraform-linters/tflint
-4️⃣ Scan for Security – Checkov
- ✅ Find risky configs (public S3, open SGs)
- ✅ Stay compliant (CIS, PCI, HIPAA)
- 📎 https://www.checkov.io/
-5️⃣ Auto-Generate Docs – terraform-docs
- ✅ Keep README in sync with your code
- ✅ Save time on manual updates
- 📎 Docs: https://terraform-docs.io/
-💡 Pro Tip: Add these checks to your CI/CD pipeline so they run on every PR.
-Infrastructure is more than code
- it’s a living system.
- Keep it clear, secure, and reliable.
-What’s your go-to Terraform best practice?
-hashtag#Terraform hashtag#DevOps hashtag#InfrastructureAsCode hashtag#CloudEngineering hashtag#Automation hashtag#Security hashtag#PlatformEngineering</p>
+    <h1>🚀 Terraform Like a Pro: 5 Game-Changing IaC Practices</h1>
+<p>Terraform isn’t just about “making it work.”<br>
+It’s about making it <strong>readable, secure, and easy to maintain</strong> so your future self (and your team) will thank you.  </p>
+<p>Here’s how to level up your Terraform game ⬇️</p>
+<hr>
+<h3>1️⃣ Format Everything – <code>terraform fmt</code></h3>
+<ul>
+<li>✅ Keep code consistent across the team  </li>
+<li>✅ Avoid “looks different on my machine” problems  </li>
+<li>📎 <a href="https://developer.hashicorp.com/terraform/cli/commands/fmt">Docs</a></li>
+</ul>
+<hr>
+<h3>2️⃣ Validate Before You Deploy – <code>terraform validate</code></h3>
+<ul>
+<li>✅ Catch errors early  </li>
+<li>✅ Avoid shipping broken infra to prod  </li>
+<li>📎 <a href="https://developer.hashicorp.com/terraform/cli/commands/validate">Docs</a></li>
+</ul>
+<hr>
+<h3>3️⃣ Lint for Best Practices – <code>tflint</code></h3>
+<ul>
+<li>✅ Spot typos &amp; deprecated arguments  </li>
+<li>✅ Fix issues before they bite you  </li>
+<li>📎 <a href="https://github.com/terraform-linters/tflint">Docs</a></li>
+</ul>
+<hr>
+<h3>4️⃣ Scan for Security – <strong>Checkov</strong></h3>
+<ul>
+<li>✅ Find risky configs (public S3, open SGs)  </li>
+<li>✅ Stay compliant (CIS, PCI, HIPAA)  </li>
+<li>📎 <a href="https://www.checkov.io/">Checkov Docs</a></li>
+</ul>
+<hr>
+<h3>5️⃣ Auto-Generate Docs – <code>terraform-docs</code></h3>
+<ul>
+<li>✅ Keep README in sync with your code  </li>
+<li>✅ Save time on manual updates  </li>
+<li>📎 <a href="https://terraform-docs.io/">Docs</a></li>
+</ul>
+<hr>
+<p>💡 <strong>Pro Tip:</strong> Add these checks to your <strong>CI/CD pipeline</strong> so they run on every PR.  </p>
+<p>Infrastructure is more than code — it’s a living system.<br>
+Keep it clear, secure, and reliable.  </p>
+<hr>
+<p><strong>What’s your go-to Terraform best practice?</strong></p>
+<hr>
   </div>
   <div class="tag-cloud">
     <p>
+      <a href="https://malikblogsite.netlify.app/tag/terraform.html">Terraform</a>
+      <a href="https://malikblogsite.netlify.app/tag/devops.html">DevOps</a>
+      <a href="https://malikblogsite.netlify.app/tag/infrastructure-as-code.html">Infrastructure as Code</a>
+      <a href="https://malikblogsite.netlify.app/tag/cloud-engineering.html">Cloud Engineering</a>
+      <a href="https://malikblogsite.netlify.app/tag/automation.html">Automation</a>
+      <a href="https://malikblogsite.netlify.app/tag/security.html">Security</a>
+      <a href="https://malikblogsite.netlify.app/tag/platform-engineering.html">Platform Engineering</a>
     </p>
   </div>
 
@@ -181,7 +211,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " malikblog ",
-  "url" : "http://127.0.0.1/8000",
+  "url" : "https://malikblogsite.netlify.app",
   "image": "",
   "description": ""
 }
