add: updating my blogs

--- a/output/terraform-like-a-pro-5-game-changing-iac-practices.html
+++ b/output/terraform-like-a-pro-5-game-changing-iac-practices.html
@@ -120,6 +120,15 @@
 </aside>
   <main>
 
+<nav>
+  <a href="https://malikblogsite.netlify.app/">Home</a>
+
+  <a href="/pages/about.html">About</a>
+  <a href="/pages/portfolio.html">Portfolio</a>
+  <a href="/category/blog.html">Blog</a>
+
+
+</nav>
 
 <article class="single">
   <header>
@@ -133,8 +142,7 @@
 
 
   <div>
-    <h1>🚀 Terraform Like a Pro: 5 Game-Changing IaC Practices</h1>
-<p>Terraform isn’t just about “making it work.”<br>
+    <p>Terraform isn’t just about “making it work.”<br>
 It’s about making it <strong>readable, secure, and easy to maintain</strong> so your future self (and your team) will thank you.  </p>
 <p>Here’s how to level up your Terraform game ⬇️</p>
 <hr>
