add: updating my blogs

--- a/output/authors.html
+++ b/output/authors.html
@@ -25,6 +25,7 @@
 
 
 
+  <link href="https://malikblogsite.netlify.app/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="malikblog Atom">
 
 
 
@@ -108,10 +109,13 @@
 <nav>
   <a href="https://malikblogsite.netlify.app/">Home</a>
 
-  <a href="/pages/about.html">About</a>
-  <a href="/pages/portfolio.html">Portfolio</a>
-  <a href="/category/blog.html">Blog</a>
+  <a href="/">Home</a>
+  <a href="/archives.html">Archives</a>
+  <a href="/categories.html">Categories</a>
+  <a href="/tags.html">Tags</a>
+  <a href="/feeds/all.atom.xml">Atom</a>
 
+  <a href="https://malikblogsite.netlify.app/feeds/all.atom.xml">Atom</a>
 
 </nav>
 
@@ -122,7 +126,7 @@
   <div>
     <ul class="list">
       <li><a href="https://malikblogsite.netlify.app/author/abdul-malik-ibikunle.html">Abdul Malik Ibikunle</a> (1)</li>
-      <li><a href="https://malikblogsite.netlify.app/author/malik.html">Malik</a> (1)</li>
+      <li><a href="https://malikblogsite.netlify.app/author/malik.html">Malik</a> (2)</li>
     </ul>
   </div>
 </article>
