--- a/output/pages/portfolio.html
+++ b/output/pages/portfolio.html
@@ -36,18 +36,24 @@
 
  
 
-    <meta name="author" content="Malik" />
-    <meta name="description" content="" />
+<meta name="author" content="Malik" />
+<meta name="description" content="My Portfolio Welcome to my portfolio! 🚀 Here you can showcase: - Projects - Case studies - GitHub repos - Certifications" />
+<meta name="keywords" content="">
+
+
   <meta property="og:site_name" content="malikblog"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="malikblog"/>
-  <meta property="og:description" content=""/>
+  <meta property="og:title" content="Portfolio"/>
+  <meta property="og:description" content="My Portfolio Welcome to my portfolio! 🚀 Here you can showcase: - Projects - Case studies - GitHub repos - Certifications"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="https://malikblogsite.netlify.app"/>
+  <meta property="og:url" content="https://malikblogsite.netlify.app/portfolio.html"/>
+  <meta property="og:type" content="article"/>
+  <meta property="article:published_time" content="2025-08-25 00:00:00+02:00"/>
+  <meta property="article:modified_time" content=""/>
+  <meta property="article:author" content="https://malikblogsite.netlify.app/author/malik.html">
+  <meta property="article:section" content="misc"/>
+  <meta property="og:image" content="">
 
-
-
-  <title>malikblog &ndash; About Me</title>
+  <title>malikblog &ndash; Portfolio</title>
 
 
 </head>
@@ -123,70 +129,35 @@
 
 <article class="single">
   <header>
-    
-    <h1 id="about">About Me</h1>
-  </header>
-  <div>
-<p align="center">
-<img src="../images/profile.jpg" alt="some alternate text" style="border-radius: 50%; width:100px">
-</p>
-<p style="width: 70%; margin: auto;" align="center">
-Welcome to my personal blog, <b>I’m Abdul Malik Ibikunle</b>. I’m a passionate <b>DevOps Engineer</b> with a solid foundation in <b>Information Technology</b>. Over the past 1 years, I’ve cultivated expertise in automation, cloud infrastructure, and observability—with hands-on experience across AWS, Kubernetes, Terraform, and more.
-</p>
-<p><br>
-<br>
-<br></p>
-<p align="center">
-<h2>More information about me</h2>
-</p>
+      
+    <h1 id="portfolio">Portfolio</h1>
+    <p>
+      Posted on Mon 25 August 2025 in <a href="https://malikblogsite.netlify.app/category/misc.html">misc</a>
 
-<p>My path into technology was sparked during a challenging time using learning as a creative escape. What started with exploring Linux and scripting soon blossomed into a love for infrastructure and automation. Since then, I have dedicated myself to mastering tools and workflows that simplify complex systems and empower teams to deliver software reliably.</p>
-<hr>
-<h3>What I Do Daily</h3>
-<ul>
-<li>Collaborating with engineering teams to <strong>design and manage scalable infrastructure</strong>  </li>
-<li>Automating workflows using <strong>Ansible</strong>, <strong>Terraform</strong>, and <strong>CI/CD pipelines</strong>  </li>
-<li>Enhancing observability with <strong>Prometheus</strong>, <strong>Grafana</strong>, and log management tools like <strong>ELK/Zabbix</strong>  </li>
-<li>Constantly experimenting beyond work hours: building personal tools, learning new technologies, or hitting the gym  </li>
-</ul>
-<p>I particularly enjoy <strong>streamlining processes</strong>, troubleshooting technical issues, and sharing knowledge through blog posts.</p>
-<hr>
-<p>Download Resume <a href="../files/resume.pdf"><strong>Here</strong></a></p>
-<hr>
-<h3>Tech Stack</h3>
-<table>
-<thead>
-<tr>
-<th>Category</th>
-<th>Tools &amp; Technologies</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Scripting &amp; Programming</td>
-<td>Python, Bash</td>
-</tr>
-<tr>
-<td>Infrastructure &amp; Automation</td>
-<td>Docker, Terraform, Ansible, Kubernetes</td>
-</tr>
-<tr>
-<td>Cloud &amp; Hosting</td>
-<td>AWS, GCP, Azure</td>
-</tr>
-<tr>
-<td>Observability &amp; Monitoring</td>
-<td>Prometheus, Grafana, ELK</td>
-</tr>
-</tbody>
-</table>
-<hr>
-<h3>Let’s Connect</h3>
-<p>Feel free to reach out via:</p>
-<p><strong>Phone</strong>: +2348106007877</p>
-<p><strong>Email</strong>: abdulmalik.ibikunle@gmail.com  </p>
-<p><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/abdulmalik-ibikunle-8a6894177/">https://www.linkedin.com/in/abdulmalik-ibikunle-8a6894177/</a>  </p>
-<p><strong>GitHub</strong>: <a href="https://github.com/malikhq">github.com/malikhq</a>  </p>  </div>
+    </p>
+  </header>
+
+
+  <div>
+    <h1>My Portfolio</h1>
+<p>Welcome to my portfolio! 🚀</p>
+<p>Here you can showcase:
+- Projects
+- Case studies
+- GitHub repos
+- Certifications</p>
+  </div>
+  <div class="tag-cloud">
+    <p>
+    </p>
+  </div>
+
+
+
+
+
+
+
 </article>
 
 <footer>
