--- a/output/categories.html
+++ b/output/categories.html
@@ -109,11 +109,6 @@
 <nav>
   <a href="https://malikblogsite.netlify.app/">Home</a>
 
-  <a href="/">Home</a>
-  <a href="/archives.html">Archives</a>
-  <a href="/categories.html">Categories</a>
-  <a href="/tags.html">Tags</a>
-  <a href="/feeds/all.atom.xml">Atom</a>
 
   <a href="https://malikblogsite.netlify.app/feeds/all.atom.xml">Atom</a>
 
@@ -129,7 +124,7 @@
         <a href="https://malikblogsite.netlify.app/category/blog.html">Blog</a> (2)
       </li>
       <li>
-        <a href="https://malikblogsite.netlify.app/category/misc.html">misc</a> (1)
+        <a href="https://malikblogsite.netlify.app/category/portfolio.html">Portfolio</a> (1)
       </li>
     </ul>
   </div>
