--- a/output/portfolio.html
+++ b/output/portfolio.html
@@ -36,16 +36,24 @@
 
  
 
-    <meta name="author" content="Malik" />
-    <meta name="description" content="" />
-  <meta property="og:site_name" content="malikblog"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="malikblog"/>
-  <meta property="og:description" content=""/>
-  <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="https://malikblogsite.netlify.app"/>
+<meta name="author" content="Malik" />
+<meta name="description" content="My Portfolio Welcome to my portfolio! 🚀 Here you can showcase: - Projects - Case studies - GitHub repos - Certifications" />
+<meta name="keywords" content="">
 
-  <title>malikblog &ndash; Posts by Abdul Malik Ibikunle:</title>
+
+  <meta property="og:site_name" content="malikblog"/>
+  <meta property="og:title" content="Portfolio"/>
+  <meta property="og:description" content="My Portfolio Welcome to my portfolio! 🚀 Here you can showcase: - Projects - Case studies - GitHub repos - Certifications"/>
+  <meta property="og:locale" content="en_US"/>
+  <meta property="og:url" content="https://malikblogsite.netlify.app/portfolio.html"/>
+  <meta property="og:type" content="article"/>
+  <meta property="article:published_time" content="2025-08-25 00:00:00+02:00"/>
+  <meta property="article:modified_time" content=""/>
+  <meta property="article:author" content="https://malikblogsite.netlify.app/author/malik.html">
+  <meta property="article:section" content="Portfolio"/>
+  <meta property="og:image" content="">
+
+  <title>malikblog &ndash; Portfolio</title>
 
 
 </head>
@@ -114,33 +122,38 @@
 
 </nav>
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="https://malikblogsite.netlify.app/terraform-best-practices.html#terraform-best-practices">Terraform Best Practices</a></h2>
+      
+    <h1 id="portfolio">Portfolio</h1>
     <p>
-      Posted on Tue 19 August 2025 in <a href="https://malikblogsite.netlify.app/category/blog.html">Blog</a>
-
+      Posted on Mon 25 August 2025 in <a href="https://malikblogsite.netlify.app/category/portfolio.html">Portfolio</a>
 
     </p>
   </header>
+
+
   <div>
-      <div><p>Infrastructure as Code (IaC) with <strong>Terraform</strong> allows DevOps teams to define, manage, and scale infrastructure in a repeatable and reliable way.<br>
-But writing Terraform isn’t just about “making it work”—it’s about making it <strong>consistent, secure, and easy to maintain</strong>.  </p>
-<p>Here are some <strong>best practices</strong> that will help …</p></div>
-        <br>
-        <a class="btn"
-           href="https://malikblogsite.netlify.app/terraform-best-practices.html#terraform-best-practices">
-          Continue reading
-        </a>
+    <h1>My Portfolio</h1>
+<p>Welcome to my portfolio! 🚀</p>
+<p>Here you can showcase:
+- Projects
+- Case studies
+- GitHub repos
+- Certifications</p>
   </div>
+  <div class="tag-cloud">
+    <p>
+    </p>
+  </div>
+
+
+
+
+
+
+
 </article>
-
-  <div class="pagination">
-  </div>
-
-
 
 <footer>
 <p>&copy;  </p>
