--- a/output/terraform-like-a-pro-5-game-changing-iac-practices.html
+++ b/output/terraform-like-a-pro-5-game-changing-iac-practices.html
@@ -124,6 +124,9 @@
 <nav>
   <a href="https://malikblogsite.netlify.app/">Home</a>
 
+  <a href="/archives.html">Archives</a>
+  <a href="/categories.html">Categories</a>
+  <a href="/tags.html">Tags</a>
 
   <a href="https://malikblogsite.netlify.app/feeds/all.atom.xml">Atom</a>
 
