add: updating my blogs

--- a/output/archives.html
+++ b/output/archives.html
@@ -127,7 +127,7 @@
           <dt>Mon 25 August 2025</dt>
 
         <dd>
-          <a href="https://malikblogsite.netlify.app/portfolio.html">Portfolio</a>
+          <a href="https://malikblogsite.netlify.app/portfolio.html">My Portfolio</a>
         </dd>
           <dt>Mon 25 August 2025</dt>
 
