--- a/output/portfolio.html
+++ b/output/portfolio.html
@@ -37,13 +37,13 @@
  
 
 <meta name="author" content="Malik" />
-<meta name="description" content="My Portfolio Welcome to my portfolio! 🚀 Here you can showcase: - Projects - Case studies - GitHub repos - Certifications" />
+<meta name="description" content="A showcase of Abdul Malik Ibikunle’s DevOps and Cloud Engineering projects, demonstrating expertise in automation, CI/CD, Kubernetes, observability, and infrastructure as code." />
 <meta name="keywords" content="">
 
 
   <meta property="og:site_name" content="malikblog"/>
-  <meta property="og:title" content="Portfolio"/>
-  <meta property="og:description" content="My Portfolio Welcome to my portfolio! 🚀 Here you can showcase: - Projects - Case studies - GitHub repos - Certifications"/>
+  <meta property="og:title" content="My Portfolio"/>
+  <meta property="og:description" content="A showcase of Abdul Malik Ibikunle’s DevOps and Cloud Engineering projects, demonstrating expertise in automation, CI/CD, Kubernetes, observability, and infrastructure as code."/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="https://malikblogsite.netlify.app/portfolio.html"/>
   <meta property="og:type" content="article"/>
@@ -53,7 +53,7 @@
   <meta property="article:section" content="Portfolio"/>
   <meta property="og:image" content="">
 
-  <title>malikblog &ndash; Portfolio</title>
+  <title>malikblog &ndash; My Portfolio</title>
 
 
 </head>
@@ -128,7 +128,7 @@
 <article class="single">
   <header>
       
-    <h1 id="portfolio">Portfolio</h1>
+    <h1 id="portfolio">My Portfolio</h1>
     <p>
       Posted on Mon 25 August 2025 in <a href="https://malikblogsite.netlify.app/category/portfolio.html">Portfolio</a>
 
@@ -137,13 +137,115 @@
 
 
   <div>
-    <h1>My Portfolio</h1>
-<p>Welcome to my portfolio! 🚀</p>
-<p>Here you can showcase:
-- Projects
-- Case studies
-- GitHub repos
-- Certifications</p>
+    <p>Welcome to my portfolio!<br>
+Here’s a curated list of projects I’ve worked on — showcasing <strong>DevOps, Cloud Engineering, Observability, and Infrastructure Automation</strong>.</p>
+<hr>
+<h2>🛠 DevOps &amp; Cloud Projects</h2>
+<h3>1. <strong>AWS 3-Tier Web Application</strong></h3>
+<ul>
+<li>Designed and deployed a <strong>highly available 3-tier architecture</strong> on AWS (VPC, EC2, RDS, and Load Balancers).  </li>
+<li>Focused on <strong>scalability, security, and fault tolerance</strong>.  </li>
+<li>Automated infrastructure provisioning with <strong>Terraform</strong>.<br>
+🔗 <a href="https://github.com/malikhq/AWS-3-tier-Web-Application">View Project</a></li>
+</ul>
+<hr>
+<h3>2. <strong>Robot Shop (Microservices Demo App)</strong></h3>
+<ul>
+<li>Deployed <strong>Robot Shop</strong>, a microservices-based demo application for Kubernetes and observability.  </li>
+<li>Used <strong>Helm charts</strong> and <strong>Kubernetes manifests</strong> for deployment.  </li>
+<li>Integrated with <strong>Prometheus, Grafana, and Elastic Stack</strong> for monitoring and logging.<br>
+🔗 <a href="https://github.com/malikhq/robot-shop">View Project</a></li>
+</ul>
+<hr>
+<h3>3. <strong>Docker ELK Stack</strong></h3>
+<ul>
+<li>Set up a <strong>centralized logging solution</strong> using the <strong>ELK stack</strong> (Elasticsearch, Logstash, Kibana).  </li>
+<li>Containerized the stack with <strong>Docker Compose</strong> for local observability.  </li>
+<li>Used for <strong>log aggregation, analytics, and visualization</strong>.<br>
+🔗 <a href="https://github.com/malikhq/docker-elk">View Project</a></li>
+</ul>
+<hr>
+<h3>4. <strong>CI/CD Flask Starter</strong></h3>
+<ul>
+<li>Built a <strong>Flask web app</strong> with a complete <strong>CI/CD pipeline</strong>.  </li>
+<li>Automated testing, building, and deployment with <strong>GitHub Actions / Jenkins</strong>.  </li>
+<li>Demonstrated <strong>DevOps fundamentals</strong> in application delivery.<br>
+🔗 <a href="https://github.com/malikhq/CI-CD-FlaskStarter">View Project</a></li>
+</ul>
+<hr>
+<h3>5. <strong>CI/CD Assessment</strong></h3>
+<ul>
+<li>A project for testing <strong>continuous integration and delivery workflows</strong>.  </li>
+<li>Explored <strong>best practices in automated pipelines</strong>, branching strategies, and deployment workflows.  </li>
+<li>Good example of <strong>pipeline design &amp; assessment exercises</strong>.<br>
+🔗 <a href="https://github.com/malikhq/CICD-Assessment">View Project</a></li>
+</ul>
+<hr>
+<h3>6. <strong>CD with GitOps</strong></h3>
+<ul>
+<li>Implemented <strong>Continuous Delivery using GitOps principles</strong>.  </li>
+<li>Managed Kubernetes deployments declaratively with <strong>ArgoCD</strong>.  </li>
+<li>Ensured infrastructure and application state were always <strong>in sync with Git</strong>.<br>
+🔗 <a href="https://github.com/malikhq/CD-with-GitOps">View Project</a></li>
+</ul>
+<hr>
+<h3>7. <strong>WordPress Application Deployment</strong></h3>
+<ul>
+<li>Automated the deployment of a <strong>WordPress site</strong> with database integration.  </li>
+<li>Containerized using <strong>Docker</strong> and managed via <strong>Kubernetes</strong>.  </li>
+<li>Focused on <strong>scalability and ease of deployment</strong>.<br>
+🔗 <a href="https://github.com/malikhq/Wordpress-application">View Project</a></li>
+</ul>
+<hr>
+<h3>8. <strong>Monitoring Stack</strong></h3>
+<ul>
+<li>Built a <strong>full monitoring stack</strong> using <strong>Prometheus, Grafana, and Node Exporter</strong>.  </li>
+<li>Collected system and application metrics.  </li>
+<li>Designed custom <strong>Grafana dashboards</strong> for visualization.<br>
+🔗 <a href="https://github.com/malikhq/Monitoring">View Project</a></li>
+</ul>
+<hr>
+<h3>9. <strong>Observability with Grafana &amp; Loki</strong></h3>
+<ul>
+<li>Deployed <strong>Grafana Loki</strong> for <strong>log aggregation</strong>.  </li>
+<li>Integrated with <strong>Prometheus</strong> for metrics and <strong>Grafana</strong> for unified observability.  </li>
+<li>End-to-end solution for <strong>metrics + logs visualization</strong>.<br>
+🔗 <a href="https://github.com/malikhq/Observability-with-Grafana-Loki">View Project</a></li>
+</ul>
+<hr>
+<h3>10. <strong>API Solution</strong></h3>
+<ul>
+<li>Designed and deployed an <strong>API-based solution</strong> with containerized services.  </li>
+<li>Automated testing and deployment pipelines.  </li>
+<li>Demonstrates <strong>API-first development with DevOps automation</strong>.<br>
+🔗 <a href="https://github.com/malikhq/Api-Solution">View Project</a></li>
+</ul>
+<hr>
+<h3>11. <strong>Spring Pet Clinic</strong></h3>
+<ul>
+<li>Deployed the classic <strong>Spring PetClinic microservices app</strong> in Kubernetes.  </li>
+<li>Set up CI/CD pipelines for automated builds and deployments.  </li>
+<li>Focused on <strong>container orchestration and microservices automation</strong>.<br>
+🔗 <a href="https://github.com/malikhq/SpringPet-Clinic">View Project</a></li>
+</ul>
+<hr>
+<h3>12. <strong>Postgres Replication Demo</strong></h3>
+<ul>
+<li>Implemented <strong>PostgreSQL master-slave replication</strong> for <strong>high availability</strong>.  </li>
+<li>Automated deployment using Docker and Kubernetes.  </li>
+<li>Showcases <strong>database reliability engineering (DBRE)</strong> skills.<br>
+🔗 <a href="https://github.com/malikhq/Postgres-Replication-Demo">View Project</a></li>
+</ul>
+<hr>
+<h2>📜 Certifications &amp; Contributions</h2>
+<ul>
+<li><strong>DevOps Engineer</strong> – Skilled in CI/CD, automation, and observability.  </li>
+<li><strong>Cloud Infrastructure</strong> – AWS, GCP, Azure deployments.  </li>
+<li><strong>Research</strong> – GIS-based flood risk and mapping projects.  </li>
+</ul>
+<hr>
+<p>🔥 This portfolio reflects my hands-on work in <strong>DevOps, CI/CD pipelines, Kubernetes, cloud automation, monitoring, and observability</strong>.<br>
+Always building. Always automating. Always learning.  </p>
   </div>
   <div class="tag-cloud">
     <p>
