add: updating my blogs

--- a/output/portfolio.html
+++ b/output/portfolio.html
@@ -37,13 +37,13 @@
  
 
 <meta name="author" content="Malik" />
-<meta name="description" content="A showcase of Abdul Malik Ibikunle’s DevOps and Cloud Engineering projects, demonstrating expertise in automation, CI/CD, Kubernetes, observability, and infrastructure as code." />
+<meta name="description" content="A showcase of my DevOps and Cloud Engineering projects, demonstrating expertise in automation, CI/CD, Kubernetes, observability, and infrastructure as code." />
 <meta name="keywords" content="">
 
 
   <meta property="og:site_name" content="malikblog"/>
   <meta property="og:title" content="My Portfolio"/>
-  <meta property="og:description" content="A showcase of Abdul Malik Ibikunle’s DevOps and Cloud Engineering projects, demonstrating expertise in automation, CI/CD, Kubernetes, observability, and infrastructure as code."/>
+  <meta property="og:description" content="A showcase of my DevOps and Cloud Engineering projects, demonstrating expertise in automation, CI/CD, Kubernetes, observability, and infrastructure as code."/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="https://malikblogsite.netlify.app/portfolio.html"/>
   <meta property="og:type" content="article"/>
@@ -120,6 +120,7 @@
   <a href="/archives.html">Archives</a>
   <a href="/categories.html">Categories</a>
   <a href="/tags.html">Tags</a>
+  <a href="/portfolio.html">Portfolio</a>
 
   <a href="https://malikblogsite.netlify.app/feeds/all.atom.xml">Atom</a>
 
