--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -114,6 +114,7 @@
   <a href="/archives.html">Archives</a>
   <a href="/categories.html">Categories</a>
   <a href="/tags.html">Tags</a>
+  <a href="/portfolio.html">Portfolio</a>
 
   <a href="https://malikblogsite.netlify.app/feeds/all.atom.xml">Atom</a>
 
