--- a/output/terraform-like-a-pro-5-game-changing-iac-practices.html
+++ b/output/terraform-like-a-pro-5-game-changing-iac-practices.html
@@ -127,6 +127,7 @@
   <a href="/archives.html">Archives</a>
   <a href="/categories.html">Categories</a>
   <a href="/tags.html">Tags</a>
+  <a href="/portfolio.html">Portfolio</a>
 
   <a href="https://malikblogsite.netlify.app/feeds/all.atom.xml">Atom</a>
 
